core/unpackaged/main/default/objects/OrderItemSummary/fields/Displayed_Description__c.field-meta.xml
<CustomField>
    <fullName>Displayed_Description__c</fullName>
    <description>Determines the description that is displayed in the Order Summary page</description>
    <formula>IF(ISBLANK(Description__c), Description, Description__c)</formula>
    <inlineHelpText>Determines the description that is displayed in the Order Summary page</inlineHelpText>
    <label>Displayed Description</label>
    <type>Text</type>
</CustomField>