core/unpackaged/main/default/objects/OrderItemSummary/fields/Padded_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Padded_Line_Number__c</fullName>
    <formula>LPAD(TEXT(LineNumber), 3, '0')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Padded Line Number</label>
    <type>Text</type>
</CustomField>