core/unpackaged/main/default/objects/OrderItemSummary/fields/PPI_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>PPI_Part_Number__c</fullName>
    <formula>IF(ISBLANK(OriginalOrderItem.PPI_Part_Number__c), Product2.StockKeepingUnit, OriginalOrderItem.PPI_Part_Number__c)</formula>
    <label>PPI Part Number</label>
    <type>Text</type>
</CustomField>